--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@syncfusion/ej2-react-maps": "^29.2.4",
     "@syncfusion/ej2-react-navigations": "^29.2.7",
     "@syncfusion/ej2-react-splitbuttons": "^29.2.4",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
